Improve errors panel, fix usability issues
 - panel text is limited upto 300 chars, tooltip is added when text is too long
 - panel text has timestamp in the end (need improvements or disabling)
 - panel is hidden in case of successful server response

--- a/app/assets/stylesheets/concerns/panels/1.common.css.scss
+++ b/app/assets/stylesheets/concerns/panels/1.common.css.scss
@@ -2,4 +2,8 @@
   .panel-heading {
     height: 60px; // empiric constant for h4 and button group
   }
+
+  .tooltip-inner {
+    max-width: 80%;
+  }
 }
